syntax = "proto3";

import "Protos/google/api/annotations.proto";

package protos.auth.v1;

// Auth service
service AuthService {
  // Verify whether a user is a registered SSTAA member
  rpc VerifyUser (VerifyUserRequest) returns (VerifyUserResponse) {
    option (google.api.http) = {
      post: "/v1/auth/verify"
      body: "*"
    };
  };
  
  rpc WhoAmI (WhoAmIRequest) returns (WhoAmIResponse) {
    option (google.api.http) = {
      get: "/v1/auth/whoami"
    };
  }
}

message VerifyUserRequest {
  string email = 1;
}

message VerifyUserResponse {
  string id = 1;
  bool linked = 2;
}

message WhoAmIRequest {
}

message WhoAmIResponse {
  string id = 1;
}
